config/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: disabled
  name: test
