config/statefulset.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tcp-server
  namespace: test
  labels:
    app: tcp-server
spec:
  ports:
    - port: 2379
      name: tcp-server
      appProtocol: TCP
  clusterIP: None
  selector:
    app: tcp-server
---
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: StatefulSet
metadata:
  name: tcp-server
  namespace: test
  labels:
    app: tcp-server
spec:
  serviceName: "tcp-server"
  selector:
    matchLabels:
      app: tcp-server
  replicas: 2
  template:
    metadata:
      labels:
        app: tcp-server
    spec:
      containers:
        - name: tcp-server
          image: ko://github.com/anishjoshi/tcp-poc/cmd/server
          ports:
            - containerPort: 2379
              name: tcp-server
              protocol: TCP
---
