config/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: tcp-gateway
  namespace: test
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  servers:
  - hosts:
    - '*.plexer.rcs-debug.ccloud-poc.shoot.canary.k8s-hana.ondemand.com'
    port:
      name: tcp
      number: 2379
      protocol: TCP
