config/service-entry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: sfs-entry
spec:
  hosts:
    - tcp-server-0.tcp-server.test.svc.cluster.local
  location: MESH_INTERNAL
  exportTo:
    - .
  ports:
    - name: tcp
      number: 2379
      protocol: TCP
  resolution: DNS
